# edubot

./: README.md  package.xml  setup.cfg  setup.py
edubot/: __init__.py
launch/: description.launch.py
meshes/: base_footprint.STL  camera_link.STL  caster_sphere_link.STL  imu_link.STL  left_wheel_link.STL  lidar_link.STL  right_wheel_link.STL
urdf/: edubot.urdf
